[gd_scene load_steps=6 format=2]

[ext_resource path="res://GridManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlantManager.gd" type="Script" id=2]
[ext_resource path="res://ZombieSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://WaveManager.gd" type="Script" id=4]
[ext_resource path="res://PlantSelectionMenu.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]

[node name="PlantManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="GameLayer" type="Node2D" parent="."]

[node name="GridManager" parent="GameLayer" instance=ExtResource( 1 )]

[node name="ZombieSpawner1" parent="GameLayer" instance=ExtResource( 3 )]
position = Vector2( 622, 96 )

[node name="ZombieSpawner2" parent="GameLayer" instance=ExtResource( 3 )]
position = Vector2( 622, 220 )

[node name="ZombieSpawner3" parent="GameLayer" instance=ExtResource( 3 )]
position = Vector2( 622, 160 )

[node name="WaveManager" type="Node" parent="GameLayer"]
script = ExtResource( 4 )

[node name="UILayer" type="Control" parent="."]
margin_left = 1.0
margin_top = 321.0
margin_right = 41.0
margin_bottom = 361.0

[node name="SunCounter" type="Control" parent="UILayer"]
margin_top = -320.0
margin_right = 40.0
margin_bottom = -280.0

[node name="Label" type="Label" parent="UILayer/SunCounter"]
margin_right = 40.0
margin_bottom = 14.0
text = "Sun : 0"

[node name="PlantSelectionMenu" parent="UILayer" instance=ExtResource( 5 )]
