[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PlantManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/PlantPlaceClick.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/SunCollect.mp3" type="AudioStream" id=3]

[node name="PlantManager" type="Node2D"]
script = ExtResource( 1 )

[node name="PlacePlantAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SunCollectPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="SetSun" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="SetSun" to="." method="_on_SetSun_timeout"]
